--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Bankist</title>
   </head>
   <body>
@@ -123,6 +123,6 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
